# stock-monitoring-bot

./: .env.template  .gitignore  Makefile  README.md  debug_discord.py  debug_signature_verification.py  discord_endpoint_info.txt  lambda_pnl_report.py  main.py  pyproject.toml  test_add_data.py  test_command_processing.py  test_discord_debug.py  test_serialization.py
.github/workflows/: deploy.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  lambda_functions_structure.md  project_overview.md  suggested_commands.md  task_completion_workflow.md  tech_stack.md
cloudflare-worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
cloudflare-worker/src/: index.ts
config/: config.json.template
docs/: alpha_vantage_setup.md  discord_webhook_deployment.md
rust/: Cargo.toml  build.sh
rust/src/: config.rs  lib.rs  models.rs
rust/src/database/: mod.rs
rust/src/discord/: interactions.rs  mod.rs  signature.rs
rust/src/stocks/: mod.rs
scripts/: build.sh  build_cloudflare_worker.sh  build_discord_lambda.sh  deploy.sh  deploy_cloudflare_worker.sh  register_commands.py  test_interactions.py  test_lambda_local.py
src/: discord_processor.py
src/stock_monitoring_bot/: __init__.py  config.py
src/stock_monitoring_bot/handlers/: __init__.py  command_processor.py  discord_handler.py  interactions_handler.py  interactions_only.py  main.py  scheduled_handler.py
src/stock_monitoring_bot/models/: __init__.py  stock.py
src/stock_monitoring_bot/repositories/: __init__.py  alert_repository.py  base.py  portfolio_repository.py  stock_repository.py
src/stock_monitoring_bot/security/: rate_limiter.py
src/stock_monitoring_bot/services/: __init__.py  alert_engine.py  data_provider.py  portfolio_service.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/environments/: dev.tfvars.template  prod.tfvars
terraform/environments/dev/: terraform.tfvars
tests/: test_alert_engine.py  test_command_processor.py  test_data_provider.py  test_discord_handler.py  test_models.py  test_portfolio_service.py
(+18 files in other folders)
